--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -317,9 +317,11 @@ jobs:
         file_glob: true
 
     - name: PUSHPLUS信息通知
-      if: steps.organizer.outputs.status == 'success' && if: env.SERVERCHAN_SCKEY == 'true'
+      if: steps.organizer.outputs.status == 'success' &&  env.SERVERCHAN_SCKEY == 'true'
       run: |
         curl -k --data token="${{ secrets.PUSH_PLUS_TOKEN }}" --data title="[${{ env.CODE }}-${{ env.TARGET_PROFILE }}]编译成功" --data "content=我亲爱的✨主人✨：您使用【${{matrix.target}}】文件夹编译的[${{ env.CODE }}-${{ env.TARGET_PROFILE }}]固件(${{env.CangKu}}仓库的#${{env.Run_number}}号)顺利编译完成了！💐" "http://www.pushplus.plus/send"
+
+
 
    # - name: 电报机器人信息通知
      # if: steps.organizer.outputs.status == 'success' && env.SERVERCHAN_SCKEY == 'true'
